Fix missing color

--- a/src/scss/global/scaffolding/color-mode.scss
+++ b/src/scss/global/scaffolding/color-mode.scss
@@ -1,10 +1,10 @@
 .color-mode {
   &--dark {
-    background-color: #000000;
+    background-color: var(--color-adjust-tone-light-color);
   }
 
   &--light {
-    background-color: #ffffff;
+    background-color: var(--color-adjust-tone-dark-color);
   }
 
   :root & {
